--- a/main-page/main-page.css
+++ b/main-page/main-page.css
@@ -687,6 +687,9 @@
         background-color: #FFF7E1;
         height: 70px;
     }
+    .header {
+        box-shadow: 0px 14px 42px 0px #14142B24;
+    }
     .container-fluid .logo {
         width: 117.21px;
         padding: 0;
