--- a/feedback/feedback.css
+++ b/feedback/feedback.css
@@ -684,12 +684,16 @@
         margin: 0 4.8%;
         padding: 23px 25px;
     }
+    body > .footer > .navbar {
+        margin: 0;
+    }
 }
 
 @media screen and (max-width: 1142px) {
     .footer > .navbar {
         height: fit-content;
         padding: 14px 0 68px 0;
+        margin-top: 50px;
     }
     .footer .container-fluid{
         display: flex;
