feature: add partner page, refactoring: styles

--- a/feedback/feedback.css
+++ b/feedback/feedback.css
@@ -443,7 +443,7 @@
     .block-container__form-title {
         margin: 0;
     }
-    .form-froup {
+    .form-group {
         margin-bottom: 13.38px;
         
     }
