--- a/become-a-partner/become-a-partner.css
+++ b/become-a-partner/become-a-partner.css
@@ -441,7 +441,7 @@
     .block-container__form-title {
         margin: 0;
     }
-    .form-froup {
+    .form-group {
         margin-bottom: 13.38px;
         
     }
