--- a/conditions/conditions.css
+++ b/conditions/conditions.css
@@ -10,6 +10,7 @@
     position: relative;
     border: none;
     padding: 0 0 0 15px;
+    padding: 0 80px 0 63px;
 }
 
 .navbar-default .navbar-collapse,
@@ -58,7 +59,7 @@
     color: #402913;
     padding: 0;
     font-family: 'LT-Wave-Medium', sans-serif;
-    font-size: 20px;
+    font-size: 17px;
     line-height: 28px;
     font-weight: 500;
     letter-spacing: -0.015em;
@@ -92,6 +93,10 @@
 .footer .navbar-right {
     display: none;
     content: none; 
+}
+
+.logo-link {
+    display: flex;
 }
 
 .logo {
@@ -249,6 +254,7 @@
 
 .footer {
     z-index: -1;
+    overflow: hidden;
 }
 
 .footer .navbar-right {
@@ -594,12 +600,6 @@
     .footer .logo {
         padding: 0;
         margin: 0;
-    }
-}
-
-@media screen and (max-width: 1200px) {
-    body > .footer {
-        position: static;
     }
 }
 
