--- a/main-page/main-page.css
+++ b/main-page/main-page.css
@@ -92,6 +92,10 @@
     content: none; 
 }
 
+.logo-link {
+    display: flex;
+}
+
 .logo {
     width: 289.57px;    
     padding: 0;
@@ -102,13 +106,13 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .welcome {
     display: flex;
     padding: 62px 0 54px 0;
     position: relative;
-    overflow: hidden;
 }
 
 .welcome__background-vector-right {
@@ -247,7 +251,6 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    overflow: hidden;
 }
 
 .partners__top-vector {
@@ -458,10 +461,6 @@
     background-color: #FFF7E1;
     color: #402913;
     padding-top: 20px;
-}
-
-.footer {
-    z-index: -1;
 }
 
 .container-fluid > .navbar-footer {
@@ -760,6 +759,9 @@
     .partners .partners__coffee-beans {
         top: -19%;
         right: -6%;
+    }
+    .footer {
+        z-index: -1;
     }
 }
 
