--- a/conditions/conditions.css
+++ b/conditions/conditions.css
@@ -398,6 +398,7 @@
     .navbar, .navbar-default {
         background-color: #FFF7E1;
         height: 70px;
+        padding: 0 17px 0 18px;
     }
     .header {
         box-shadow: 0px 14px 42px 0px #14142B24;
