--- a/conditions/conditions.css
+++ b/conditions/conditions.css
@@ -9,8 +9,8 @@
     height: 127px;
     position: relative;
     border: none;
-    padding: 0 0 0 15px;
     padding: 0 80px 0 63px;
+    z-index: 100;
 }
 
 .navbar-default .navbar-collapse,
@@ -36,7 +36,7 @@
 .container-fluid {
     padding: 0;
     height: 100%;
-    max-width: 1200px;
+    max-width: 1190px;
 }
 
 .navbar-right {
@@ -110,7 +110,12 @@
     position: relative;
     flex-direction: column;
     overflow: hidden;
-    padding: 0 15px;
+    padding: 0 80px 0 63px;
+}
+
+.wrapper {
+    max-width: 1170px;
+    align-self: center;
 }
 
 .title-container {
@@ -253,7 +258,6 @@
 }
 
 .footer {
-    z-index: -1;
     overflow: hidden;
 }
 
@@ -454,20 +458,19 @@
     }
     .conditions {
         padding: 0;
-        z-index: -1;
+    }
+    .wrapper {
+        width: 100%;
     }
     .conditions__container {
         margin: 0;
         padding: 26px 18px 41px;
-        /* padding: 41.57px 18px 41px; */
         background-color: #FFF7E1;
-        z-index: -1;
     }
     .title-bottom-vector {
         display: flex;
         position: absolute;
         background-image: url('../assets/conditions/decoration-bottom.svg');
-        /* background-image: url('../assets/conditions/title-bottom-vector.svg'); */
         background-repeat: no-repeat;
         background-size: cover;
         background-position: bottom;
