--- a/feedback/feedback.css
+++ b/feedback/feedback.css
@@ -110,8 +110,9 @@
     position: relative;
     flex-direction: column;
     margin: 0 auto;
-    padding: 0 80px 0 63px;
+    padding: 0 80px 80px 63px;
     align-items: center;
+    overflow: hidden;
 }
 
 .feedback__background-vector-right {
@@ -340,14 +341,6 @@
     letter-spacing: -0.015em;
     text-align: right;
     margin: 0;
-}
-
-.footer {
-    display: flex;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    overflow: hidden;
 }
 
 .footer .container-fluid {
@@ -711,7 +704,6 @@
     .footer > .navbar {
         height: fit-content;
         padding: 14px 0 68px 0;
-        margin-top: 50px;
     }
     .footer .container-fluid{
         display: flex;
@@ -734,9 +726,6 @@
 }
 
 @media screen and (max-width: 1200px) {
-    .feedback {
-        padding: 0 80px 0 63px;
-    }
    .block-container {
         width: 100%;
    }
